Add faye dependency in package.json

--- a/service/package.json
+++ b/service/package.json
@@ -3,6 +3,7 @@
 	"version" : "0.1.0",
 	"engine" : "node >= 0.6.11",
 	"dependencies" : {
-		"mime" : "1.2.5"
+		"mime" : "1.2.5",
+		"faye" : "0.8.0"
 	}
 }
