--- a/service/package.json
+++ b/service/package.json
@@ -3,8 +3,9 @@
 	"version" : "0.1.0",
 	"engine" : "node >= 0.6.11",
 	"dependencies" : {
-		"mime" : "1.2.5",
-		"faye" : "0.8.0",
-    "faye-websocket": "0.4.1"
+		"mime" : "1.2.5"
+		,"faye" : "0.8.0"
+    ,"faye-websocket": "0.4.1"
+    ,"oauth": "0.9.6"
 	}
 }
