--- a/service/package.json
+++ b/service/package.json
@@ -7,6 +7,8 @@
 		"faye" : "0.8.0",
 		"faye-websocket": "0.4.1",
 		"express" : "2.5.8",
-    "oauth": "0.9.6"
+    "oauth": "0.9.6",
+    "jade": "0.20.3"
+    "stylus": "0.24.0"
 	}
 }
