--- a/service/package.json
+++ b/service/package.json
@@ -7,8 +7,9 @@
 		"faye" : "0.8.0",
 		"faye-websocket": "0.4.1",
 		"express" : "2.5.8",
-    "oauth": "0.9.6",
-    "jade": "0.20.3",
-    "stylus": "0.24.0"
+		"oauth": "0.9.6",
+		"jade": "0.20.3",
+		"stylus": "0.24.0",
+		"twitter" : "0.1.18"
   }
 }
